--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
 
     <color name="underline">#D8D6D6</color>
+    <color name="blue">#4287f5</color>
 </resources>
